k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    app.kubernetes.io/name: tetris
    environment: production
    managed-by: argocd
